0500-NETWORKING/076-ingress-traefik/resources/pokemon-nodejs.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: pokemon-nodejs
  name: _APP_NAMESPACE_PLACEHOLDER_
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokemon-nodejs
  namespace: _APP_NAMESPACE_PLACEHOLDER_
  labels:
    app.kubernetes.io/instance: pokemon-nodejs
    app.kubernetes.io/name: pokemon-nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: pokemon-nodejs
      app.kubernetes.io/name: pokemon-nodejs
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: pokemon-nodejs
        app.kubernetes.io/name: pokemon-nodejs
    spec:
      containers:
      - image: yunesabb/pokemon-custom:0.0.2
        imagePullPolicy: IfNotPresent
        name: pokemon-nodejs
        ports:
        - containerPort: 80
          name: pokemon-nodejs
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pokemon-nodejs
  namespace: _APP_NAMESPACE_PLACEHOLDER_
  labels:
    app.kubernetes.io/instance: pokemon-nodejs
  annotations:
spec:
  clusterIP: None
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/instance: pokemon-nodejs
    app.kubernetes.io/name: pokemon-nodejs
