0500-NETWORKING/076-ingress-traefik/resources/ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-api
spec:
  entryPoints:
  - traefik
  routes:
  - kind: Rule
    match: Host(`_NAMESPACE_PLACEHOLDER_-test.local`)
    services:
    - kind: TraefikService
      name: api@internal
